fixed the issue with hero section social not showing

--- a/css/my.css
+++ b/css/my.css
@@ -545,8 +545,11 @@ to{transform:rotate(-10deg);}
 
 .text-change{
   text-align: left;
-  margin: 300px auto;
+  margin: 0 auto;
   width: 328px;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
 }
 .text-change h1{
   margin: 0;
